quickfix on header logo

--- a/css/head.css
+++ b/css/head.css
@@ -17,11 +17,13 @@
 	margin-right:0;
 }
 
-.layout .header .inner .gallery_1_logo {
+.layout .header .inner #gallery_1_logo {
 	max-width: 220px;
+	height: 59px;
+	overflow: hidden;
 }
-.layout .header .inner .gallery_1_logo img {
-	width: 100%;
+.layout .header .inner #gallery_1_logo img {
+	max-width: 220px;
 	border: 0;
 }
 .layout .header .search_and_top_wrapper #gallery_1_search_text{
